some .plst files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ MadlyRad.xcworkspace/xcuserdata
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+MadlyRad.xcodeproj/xcuserdata/alextitov.xcuserdatad/xcschemes/xcschememanagement.plist
+Pods/Pods.xcodeproj/xcuserdata/alextitov.xcuserdatad/xcschemes/xcschememanagement.plist
